MMD4MecanimとMMDモデルの導入

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+VOICEROIDArena/Assets/MMD4Mecanim/
+VOICEROIDArena/Assets/Model/
+VOICEROIDArena/Assets/MMD4Mecanim.meta
+VOICEROIDArena/Assets/Model.meta
